--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -36,6 +36,9 @@ body {
     min-height: 100%;
     background: $body-background;
 }
+.content-container {
+    margin-bottom: 50px;
+}
 
 hr {
     display: block;
