MaJ de la page a propos

--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,7 @@
 
 {# Content #}
 {% block content_out %}
-    <section class="content-col">
+    <section class="content-col-2">
         <h2 class="ico-after ico-articles">Derniers Articles</h2>
 
         {% if last_articles %}
@@ -81,7 +81,7 @@
         {% endif %}
     </section>
 
-    <section class="content-col">
+    <section class="content-col-2">
         <h2 class="ico-after ico-tutorials">Dernier tutoriels</h2>
 
         
