--- a/assets/css/scss/_wide.scss
+++ b/assets/css/scss/_wide.scss
@@ -237,9 +237,15 @@
                 margin-left: 1px;
             }
 
-            .content-col {
+            .content-col-2 {
                 width: 49.5%;
-                margin: 0 0 0 1%;
+            }
+            .content-col-3 {
+                width: 32%;
+            }
+            .content-col-2,
+            .content-col-3 {
+                margin: 0 0 0 2%;
                 float: left;
 
                 &:first-child {
