MaJ page alertes et liste auteurs

--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -879,9 +879,6 @@
     }
 
     .member-item {
-        margin-right: 5px;
-        margin-left: 2px;
-
         .avatar {
             margin-top: -2px;
             height: 20px;
@@ -1042,7 +1039,7 @@
 
         li {
             display: inline-block;
-            margin: 0 5px;
+            margin: 0;
 
             .avatar {
                 height: 28px;
@@ -1513,33 +1510,40 @@
                 text-decoration: none;
             }
         } */
+    }
+}
 
-        table {
-            margin: 15px 0;
-            border-top: 1px solid #DDD;
+/**
+ * TABLE
+ */
+table {
+    margin: 15px 0;
+    border-top: 1px solid #DDD;
 
-            thead {
-                background: #DDD;
-                color: $blue;
-            }
-            th, td {
-                text-align: left;
-                padding: 5px 15px 5px 7px;
-                border-right: 1px solid #DDD;
+    thead {
+        background: #DDD;
+        color: $blue;
+    }
+    th, td {
+        text-align: left;
+        padding: 5px 15px 5px 7px;
+        border-right: 1px solid #DDD;
 
-                &:first-child {
-                    border-left: 1px solid #DDD;
-                }
-            }
-
-            tbody tr {
-                border-bottom: 1px solid #DDD;
-
-                &:nth-child(2n+1) {
-                    background: #F7F7F7;
-                }
-            }
+        &:first-child {
+            border-left: 1px solid #DDD;
         }
+    }
+
+    tbody tr {
+        border-bottom: 1px solid #DDD;
+
+        &:nth-child(2n+1) {
+            background: #F7F7F7;
+        }
+    }
+
+    &.fullwidth {
+        width: 100%;
     }
 }
 
