--- a/templates/mp/topic/index.html
+++ b/templates/mp/topic/index.html
@@ -32,7 +32,7 @@
 
 
 {% block content %}
-    <div class="authors content-wrapper">
+    <div class="authors">
         <span class="authors-label">Participants : </span>
         <ul>
             <li>
