--- a/templates/pages/association.html
+++ b/templates/pages/association.html
@@ -9,26 +9,25 @@
 
 
 {% block breadcrumb %}
-    <li class="current">L'association Zeste de Savoir</li>
+    <li>L'association Zeste de Savoir</li>
 {% endblock %}
 
 
 
 {% block headline %}
-    Association
+    <h2>L'association Zeste de Savoir</h2>
 {% endblock %}
 
 
 
 {% block content %}
-    <h3>L'association Zeste de Savoir</h3>
     <p>
-    	Zeste de Savoir est une association loi 1901 (association à but non lucratif) et joue le rôle de structure légale du site ZesteDeSavoir.com, dont le but est de promouvoir le partage de connaissances à travers des ressources pédagogiques gratuites et de préférence sous licence libre. <a href="http://www.journal-officiel.gouv.fr/publications/assoc/pdf/2014/0016/JOAFE_PDF_Unitaire_20140016_01712.pdf">Parue au Journal officiel le 19 avril 2014</a>, l'association a tenu sa première assemblée générale le 15 mars 2014, au cours de laquelle ont été élus le bureau et le conseil d'administration en présence des <strong>quatorze</strong> membres fondateurs.
+        Zeste de Savoir est une association loi 1901 (association à but non lucratif) et joue le rôle de structure légale du site ZesteDeSavoir.com, dont le but est de promouvoir le partage de connaissances à travers des ressources pédagogiques gratuites et de préférence sous licence libre. <a href="http://www.journal-officiel.gouv.fr/publications/assoc/pdf/2014/0016/JOAFE_PDF_Unitaire_20140016_01712.pdf">Parue au Journal officiel le 19 avril 2014</a>, l'association a tenu sa première assemblée générale le 15 mars 2014, au cours de laquelle ont été élus le bureau et le conseil d'administration en présence des <strong>quatorze</strong> membres fondateurs.
     </p>
     <p>
         Ces membres fondateurs sont tous des anciens membres très actifs du feu siteduzero, un site de diffusion de connaissances et d'entraide. Suite au changement de politique de ce dernier, ils ont décidé de recréer une plateforme sur laquelle ils pourraient à nouveau s'entraider et partager convenablement leurs connaissances et surtout retrouver l'esprit communautaire qu'ils aimaient tant.
     </p>
     <p>
-    	Voilà l'histoire de ZesteDeSavoir.
+        Voilà l'histoire de Zeste de Savoir.
     </p>
 {% endblock %}
