Correction sur écrans larges

--- a/assets/css/scss/_extra-wide.scss
+++ b/assets/css/scss/_extra-wide.scss
@@ -10,6 +10,9 @@
     .wide {
         display: inline;
     }
+    table .wide {
+      display: table-cell;
+    }
 
     .header-container .header-menu {
         width: 40%;
