Suppression des espaces insécables

--- a/templates/pages/eula.html
+++ b/templates/pages/eula.html
@@ -48,11 +48,11 @@
 
 	<h3>3. Définitions</h3>
 	<ul>
-		<li>Utilisateur&nbsp;: ce terme désigne toute personne qui utilise le site ou l'un des services proposés par le site.</li>
-		<li>Membre&nbsp;: l'utilisateur devient un &laquo; Membre &raquo; dès son inscription sur le site.</li>
+		<li>Utilisateur : ce terme désigne toute personne qui utilise le site ou l'un des services proposés par le site.</li>
+		<li>Membre : l'utilisateur devient un &laquo; Membre &raquo; dès son inscription sur le site.</li>
 		<li>Contenu de l'utilisateur : ce sont les données transmises par l'utilisateur sur le site.</li>
-		<li>Lien hypertexte&nbsp;: </li>
-		<li>Identifiant et mot de passe&nbsp;: c'est l'ensemble des informations nécessaires à l'identification d'un membre sur le site. L'identifiant et le mot de passe permettent à l'utilisateur d'accéder à des services réservés aux membres du site. Le mot de passe est une information confidentielle. </li>
+		<li>Lien hypertexte : </li>
+		<li>Identifiant et mot de passe : c'est l'ensemble des informations nécessaires à l'identification d'un membre sur le site. L'identifiant et le mot de passe permettent à l'utilisateur d'accéder à des services réservés aux membres du site. Le mot de passe est une information confidentielle. </li>
 	</ul>
 
 	<h3>4. Accès au site</h3>
@@ -63,7 +63,7 @@
 		L'éditeur met en &oelig;uvre tous les moyens mis à sa disposition pour assurer un accès de qualité à ses services. L'obligation étant de moyens, le site ne s'engage pas à atteindre ce résultat.
 	</p>
 	<p>
-		L'accès au site peut à tout moment faire l'objet d'une interruption à des fins de maintenance, de mise à jour et pour toute autre raison (raisons techniques, force majeure, etc.)&nbsp;sans que l'interruption n'ouvre droit à aucune obligation ni indemnisation.
+		L'accès au site peut à tout moment faire l'objet d'une interruption à des fins de maintenance, de mise à jour et pour toute autre raison (raisons techniques, force majeure, etc.) sans que l'interruption n'ouvre droit à aucune obligation ni indemnisation.
 	</p>
 	<p>
 		Tout événement d&ucirc; à un cas de force majeur ayant pour conséquence un dysfonctionnement du réseau ou du serveur n'engage pas la responsabilité de l'éditeur.
@@ -87,7 +87,7 @@
 	<h3>5. Contenu de l'utilisateur</h3>
 	<h4>5.1 Généralités </h4>
 	<p>
-		Le site permet aux membres de publier des commentaires, des tutoriels, des articles, des messages sur les forums, de même que des messages privés entre membres [&nbsp;+ projets, etc. ?]. Le membre est responsable des propos tenus sur les forums et dans les commentaires d'un article ou d'un tutoriel.
+		Le site permet aux membres de publier des commentaires, des tutoriels, des articles, des messages sur les forums, de même que des messages privés entre membres [ + projets, etc. ?]. Le membre est responsable des propos tenus sur les forums et dans les commentaires d'un article ou d'un tutoriel.
 	</p>
 	<p>
 		Il est interdit aux membres de télécharger, diffuser, transmettre ou d'envoyer sur le site des contenus qui :
@@ -110,15 +110,15 @@
 		Cette interdiction s'applique également aux contenus auxquels donnent accès les liens hypertextes fournis par un membre sur le site.
 	</p>
 	<p>
-		Dans ses publications, le membre s'engage de plus à respecter les règles du site [&nbsp;Note : ajouter le lien]. Par ailleurs, le site exerce une modération sur les publications et se réserve le droit de refuser leur mise en ligne, sans avoir à s'en justifier auprès du membre.
+		Dans ses publications, le membre s'engage de plus à respecter les règles du site [ Note : ajouter le lien]. Par ailleurs, le site exerce une modération sur les publications et se réserve le droit de refuser leur mise en ligne, sans avoir à s'en justifier auprès du membre.
 	</p>
 
 	<h4>5.2 Responsabilité du contenu publié par un membre et sanctions en cas de manquement</h4>
 	<p>
-		Les membres sont seuls responsables du contenu qu'ils publient. L'éditeur du site ne peut être considéré comme responsable du contenu transmis ou mis en ligne par les membres. Toutefois, &nbsp;les utilisateurs peuvent signaler une publication manifestement contraire aux lois en vigueur, aux règles du site ou aux Conditions Générales d'Utilisation &nbsp;dans le but d'un acte de modération par l'équipe du site.
+		Les membres sont seuls responsables du contenu qu'ils publient. L'éditeur du site ne peut être considéré comme responsable du contenu transmis ou mis en ligne par les membres. Toutefois,  les utilisateurs peuvent signaler une publication manifestement contraire aux lois en vigueur, aux règles du site ou aux Conditions Générales d'Utilisation  dans le but d'un acte de modération par l'équipe du site.
 	</p>
 	<p>
-		En cas de manquement par un membre des règles du site et/ou des éléments ci-dessus, la modération de zestedesavoir.com peut décider de lui bloquer l'accès au site, à titre provisoire ou définitif, ou d'en limiter l'utilisation. Les différentes sanctions applicables sont inscrites dans le règlement du site [&nbsp;Note : ajouter le lien]. Aucune contrepartie ne pourra être exigée.
+		En cas de manquement par un membre des règles du site et/ou des éléments ci-dessus, la modération de zestedesavoir.com peut décider de lui bloquer l'accès au site, à titre provisoire ou définitif, ou d'en limiter l'utilisation. Les différentes sanctions applicables sont inscrites dans le règlement du site [ Note : ajouter le lien]. Aucune contrepartie ne pourra être exigée.
 	</p>
 
 	<h4>5.3 Propriété du contenu publié par un membre </h4>
@@ -129,12 +129,12 @@
 		L'auteur d'un tutoriel ou d'un article a également la possibilité de mettre sa publication en ligne selon la licence &ldquo;CC&rdquo; (Creative Commons) qui lui convient le mieux parmi les licences CC suivantes :
 	</p>
 	<ul>
-		<li>Licence CC BY - <a href="http://creativecommons.org/licenses/by/3.0/fr/">Lire le résumé explicatif de la licence</a>&nbsp;- <a href="http://creativecommons.org/licenses/by/3.0/fr/legalcode">Voir le Code juridique</a></li>
-		<li>Licence CC BY-SA - <a href="http://creativecommons.org/licenses/by-sa/3.0/fr/">Lire le résumé explicatif de la licence</a>&nbsp;- <a href="http://creativecommons.org/licenses/by-sa/3.0/fr/legalcode">Voir le Code juridique</a></li>
-		<li>Licence CC BY-ND - <a href="http://creativecommons.org/licenses/by-nd/3.0/fr/">Lire le résumé explicatif de la licence</a>&nbsp;- <a href="http://creativecommons.org/licenses/by-nd/3.0/fr/legalcode">Voir le Code juridique</a></li>
-		<li>Licence CC BY-NC - <a href="http://creativecommons.org/licenses/by-nc/3.0/fr/">Lire le résumé explicatif de la licence</a>&nbsp;- <a href="http://creativecommons.org/licenses/by-nc/3.0/fr/legalcode">Voir le Code juridique</a></li>
-		<li>Licence CC BY-NC-SA - <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/fr/">Lire le résumé explicatif de la licence</a>&nbsp;- <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/fr/legalcode">Voir le Code juridique</a></li>
-		<li>Licence CC BY-NC-ND - <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/">Lire le résumé explicatif de la licence</a>&nbsp;- <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/legalcode">Voir le Code juridique</a></li>
+		<li>Licence CC BY - <a href="http://creativecommons.org/licenses/by/3.0/fr/">Lire le résumé explicatif de la licence</a> - <a href="http://creativecommons.org/licenses/by/3.0/fr/legalcode">Voir le Code juridique</a></li>
+		<li>Licence CC BY-SA - <a href="http://creativecommons.org/licenses/by-sa/3.0/fr/">Lire le résumé explicatif de la licence</a> - <a href="http://creativecommons.org/licenses/by-sa/3.0/fr/legalcode">Voir le Code juridique</a></li>
+		<li>Licence CC BY-ND - <a href="http://creativecommons.org/licenses/by-nd/3.0/fr/">Lire le résumé explicatif de la licence</a> - <a href="http://creativecommons.org/licenses/by-nd/3.0/fr/legalcode">Voir le Code juridique</a></li>
+		<li>Licence CC BY-NC - <a href="http://creativecommons.org/licenses/by-nc/3.0/fr/">Lire le résumé explicatif de la licence</a> - <a href="http://creativecommons.org/licenses/by-nc/3.0/fr/legalcode">Voir le Code juridique</a></li>
+		<li>Licence CC BY-NC-SA - <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/fr/">Lire le résumé explicatif de la licence</a> - <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/fr/legalcode">Voir le Code juridique</a></li>
+		<li>Licence CC BY-NC-ND - <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/">Lire le résumé explicatif de la licence</a> - <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/legalcode">Voir le Code juridique</a></li>
 	</ul>
 	<p>
 		La mise en ligne d'un tutoriel ou d'un article est soumise à une validation préalable par l'éditeur du site. L'éditeur du site est libre de refuser la publication d'un tutoriel ou d'un article, sans avoir à s'en justifier auprès du membre et sans qu'aucune contrepartie puisse être exigée.
@@ -148,7 +148,7 @@
 
 	<h4>5.4 Création d'un profil personnel </h4>
 	<p>
-		Après inscription, tout membre dispose d'une page de profil personnelle. Ce profil recense l'ensemble de l'activité du membre sur le site (forums, signature, avatar, &nbsp;articles, tutoriels, [+&hellip; si on ajoute d'autres services comme une section dédiée aux projets ou autre]) à l'exception des informations d'inscription (nom, prénom, adresse email,...) et correspondances (via le système de messagerie privée) privées.
+		Après inscription, tout membre dispose d'une page de profil personnelle. Ce profil recense l'ensemble de l'activité du membre sur le site (forums, signature, avatar,  articles, tutoriels, [+&hellip; si on ajoute d'autres services comme une section dédiée aux projets ou autre]) à l'exception des informations d'inscription (nom, prénom, adresse email,...) et correspondances (via le système de messagerie privée) privées.
 	</p>
 	<p>
 		Cette page de profil, accessible à tous les membres, a pour objet de permettre au membre de se présenter. Le membre est libre d'ajouter une photographie le représentant, un avatar et d'autres informations supplémentaires : biographie, formations et emploi, l'adresse des sites et/ou blog et/ou portfolio présentant les travaux du membre, comptes sur les réseaux sociaux et toute autre information au choix du membre.
@@ -164,7 +164,7 @@
 	</p>
 
 	<h3>6. Données personnelles</h3>
-	<h4>6.1 &nbsp;Loi Informatique et Libertés du 6 janvier 1978</h4>
+	<h4>6.1  Loi Informatique et Libertés du 6 janvier 1978</h4>
 	<p>
 		Conformément à la Loi n<sup>o</sup>78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés, le traitement des données personnelles réalisées sur le site a fait l'objet d'une déclaration auprès de la Commission Nationale Informatique et Liberté (CNIL).
 	</p>
@@ -175,7 +175,7 @@
 		L'éditeur du site s'engage à assurer un niveau de protection suffisant des informations fournies dans le but de garantir le respect de la vie privée conformément aux prescriptions légales.
 	</p>
 
-	<h4>6.2 &nbsp;Utilisation des données enregistrées</h4>
+	<h4>6.2  Utilisation des données enregistrées</h4>
 	<p>
 		Toutes les données à caractère personnel transmises par les utilisateurs et membres du site sont recueillies dans le plus strict respect de la législation. Elles ont pour finalité une meilleure utilisation de zestedesavoir.com et sont donc utilisées par l'éditeur du site à cette fin.
 	</p>
@@ -192,7 +192,7 @@
 		En dehors du cas prévu ci-dessus, les données personnelles ne feront l'objet d'aucune communication à des tiers. Toutefois, elles pourront être divulguées en application d'une loi ou d'un règlement ou en vertu d'une décision d'une autorité réglementaire ou judiciaire compétente.
 	</p>
 
-	<h4>6.3 &nbsp;Non-acceptation, modification et suppression des données enregistrées</h4>
+	<h4>6.3  Non-acceptation, modification et suppression des données enregistrées</h4>
 
 	<p>
 		L'utilisateur est libre de refuser de communiquer les renseignements sollicités pour l'inscription sur le site. Dans ce cas, il ne peut pas en devenir membre.
@@ -203,15 +203,15 @@
 
 	<h4>6.4 Politique relative à l'installation de cookies</h4>
 	<p>
-		L'éditeur du site utilise la technologie des marqueurs (cookies) afin d'améliorer la qualité du site &nbsp;et mieux répondre aux attentes des utilisateurs. Le membre prend acte que le site procède à l'installation de cookies sur le disque dur de son ordinateur en vue d'identifier chacune de ses connexion.
+		L'éditeur du site utilise la technologie des marqueurs (cookies) afin d'améliorer la qualité du site  et mieux répondre aux attentes des utilisateurs. Le membre prend acte que le site procède à l'installation de cookies sur le disque dur de son ordinateur en vue d'identifier chacune de ses connexion.
 	</p>
 	<p>
-		De manière générale, les cookies sont sans dommage pour l'ordinateur du membre. Ce dernier est libre d'accepter ou refuser les cookies en configurant son navigateur internet à cet effet. Pour ce faire, le membre peut se rendre sur le site de la Commission Nationale de l'Informatique et des Libertés (CNIL) à l'adresse : <a href="http://www.google.com/url?q=http%3A%2F%2Fwww.cnil.fr%2Fvos-libertes%2Fvos-traces%2Fles-cookies%2F&amp;sa=D&amp;sntz=1&amp;usg=AFQjCNGTMYq5pUcHrTYYP4OpVsSYp3G73Q">http://www.cnil.fr/vos-libertes/vos-traces/les-cookies/</a>&nbsp;donnant toutes les informations relatives à une telle configuration. Les cookies sont anonymes et ne sont en aucun cas utilisés pour collecter des données à caractère personnel, mais uniquement à des fins de connexion et statistiques.
+		De manière générale, les cookies sont sans dommage pour l'ordinateur du membre. Ce dernier est libre d'accepter ou refuser les cookies en configurant son navigateur internet à cet effet. Pour ce faire, le membre peut se rendre sur le site de la Commission Nationale de l'Informatique et des Libertés (CNIL) à l'adresse : <a href="http://www.google.com/url?q=http%3A%2F%2Fwww.cnil.fr%2Fvos-libertes%2Fvos-traces%2Fles-cookies%2F&amp;sa=D&amp;sntz=1&amp;usg=AFQjCNGTMYq5pUcHrTYYP4OpVsSYp3G73Q">http://www.cnil.fr/vos-libertes/vos-traces/les-cookies/</a> donnant toutes les informations relatives à une telle configuration. Les cookies sont anonymes et ne sont en aucun cas utilisés pour collecter des données à caractère personnel, mais uniquement à des fins de connexion et statistiques.
 	</p>
 
 	<h3>7. Propriété intellectuelle</h3>
 	<p>
-		Les marques, illustrations, signes distinctifs et tout autre contenu du site sont la propriété exclusive de l'éditeur du site et&nbsp;font l'objet d'une protection par le Code de la propriété intellectuelle.
+		Les marques, illustrations, signes distinctifs et tout autre contenu du site sont la propriété exclusive de l'éditeur du site et font l'objet d'une protection par le Code de la propriété intellectuelle.
 	</p>
 	<p>
 		Toute reproduction, publication, copie des différents contenus nécessite au préalable l'autorisation de l'éditeur du site.
@@ -234,7 +234,7 @@
 		Tout recours en justice engagé par un tiers lésé sera de la responsabilité du membre et ce dernier s'engage en particulier à prendre en charge le paiement de toutes sommes, quelles qu'elles soient, qui résulteraient d'une action légale d'un tiers, y compris les honoraires d'avocat et frais de justice.
 	</p>
 	<p>
-		Le membre reste titulaire de l'intégralité de ses droits de propriété intellectuelle. Il concède cependant des droits à l'éditeur du site (voir titre 5. &ldquo;Contenu de l'utilisateur&rdquo;). &nbsp;Selon la licence choisie, le membre peut également autoriser d'autres utilisations de son oeuvre.
+		Le membre reste titulaire de l'intégralité de ses droits de propriété intellectuelle. Il concède cependant des droits à l'éditeur du site (voir titre 5. &ldquo;Contenu de l'utilisateur&rdquo;).  Selon la licence choisie, le membre peut également autoriser d'autres utilisations de son oeuvre.
 	</p>
 	<p>
 		Le contenu d'un membre peut être à tout moment et pour n'importe quelle raison supprimé ou modifié par le site. Le membre peut ne recevoir aucune justification et notification préalable à la suppression ou à la modification du contenu.
