--- a/templates/tutorial/tutorial/view_online.html
+++ b/templates/tutorial/tutorial/view_online.html
@@ -135,7 +135,15 @@
             <ul>
                 <li><a href="{{ tutorial.get_absolute_url }}" class="ico-after offline blue">Version hors-ligne</a></li>
                 <li><a href="{% url "zds.tutorial.views.history_validation" tutorial.pk %}" class="ico-after history blue">Historique validation</a></li>
-                <li><a href="{% url "zds.tutorial.views.invalid_tutorial" tutorial.pk %}" class="ico-after cross blue">Dépublier</a>
+                <li>
+                    <a href="#unpublish" class="ico-after open-modal cross blue">Dépublier</a>
+                    <div class="modal modal-small" id="unpublish">
+                        <p>
+                            Êtes-vous certains de vouloir dépublier le tutoriel "<em>{{ tutorial.title }}</em>"
+                        </p>
+                        <a href="{% url "zds.tutorial.views.invalid_tutorial" tutorial.pk %}" class="btn btn-submit">Confirmer</a>
+                    </div>
+                </li>
             </ul>
         </div>
     {% endif %}
