--- a/templates/tutorial/member/index.html
+++ b/templates/tutorial/member/index.html
@@ -1,32 +1,55 @@
-{% extends "tutorial/index.html" %}
+{% extends "tutorial/base.html" %}
 {% load humanize %}
+
+
+
+{% block title %}
+    Liste des tutoriels
+{% endblock %}
+
+
+
+{% block breadcrumb %}
+    <li>Liste des tutoriels</a>
+{% endblock %}
+
+
+
+{% block headline %}
+    <h2>Liste des tutoriels</h2>
+{% endblock %}
 
 
 
 {% block content %}
     {% if tutorials %}
-        {% for tuto in tutorials %}
-            <article>
-                <a href="
-                    {% if type = 'public' and tuto.on_line %}
-                        {{ tuto.get_absolute_url_online }}
-                    {% else %}
-                        {{ tuto.get_absolute_url }}
-                    {% endif %}
-                ">
-                    {% if tuto.image %}
-                        <img src="{{tuto.image.thumb.url }}" alt="" class="tutorial-img avatar">
-                    {% endif %}
-                    
-                    <div class="tutorial-infos">
-                        <h3>{{ tuto.title }}</h3>
-                        <p class="article-metadata">
-                            crée {{ tuto.create_at|naturaltime }}
-                        </p>
-                    </div>
-                </a>
-            </article>
-        {% endfor %}
+        <div class="tutorials-list">
+            {% for tutorial in tutorials %}
+                <article>
+                    <a href="
+                        {% if type = 'public' and tutorial.on_line %}
+                            {{ tutorial.get_absolute_url_online }}
+                        {% else %}
+                            {{ tutorial.get_absolute_url }}
+                        {% endif %}
+                    ">
+                        <img src="{{ tutorial.image.thumb.url }}" alt="" class="tutorial-img avatar">
+                        <div class="tutorial-infos">
+                            <h3>{{ tutorial.title }}</h3>
+                            
+                            <p class="article-metadata">
+                                {% if tutorial.subcategory %}
+                                    {% for category in tutorial.subcategory.all %}
+                                        {{ category.title }}                                    
+                                    {% endfor %}
+                                {% endif %}
+                                - Créé {{ tutorial.create_at|naturaltime }}
+                            </p>
+                        </div>
+                    </a>
+                </article>
+            {% endfor %}
+        </div>
     {% else %}
         <p>
             Aucun tutoriel disponible.
@@ -37,11 +60,9 @@
 
 
 {% block sidebar_new %}
-    <div>
-        <a href="{% url "zds.tutorial.views.add_tutorial" %}" class="new-btn ico-after more blue">
-            Nouveau tutoriel
-        </a>
-    </div>
+    <a href="{% url "zds.tutorial.views.add_tutorial" %}" class="new-btn ico-after more blue">
+        Nouveau tutoriel
+    </a>
 {% endblock %}
 
 
