--- a/templates/tutorial/index.html
+++ b/templates/tutorial/index.html
@@ -31,7 +31,7 @@
 
 {% block content %}
     {% if tutorials %}
-        <div class="tutorials-list">
+        <div class="tutorial-list">
             {% for tutorial in tutorials %}
                 <article>
                     <a href="{{ tutorial.get_absolute_url_online }}">
@@ -39,13 +39,13 @@
                         <div class="tutorial-infos">
                             <h3>{{ tutorial.title }}</h3>
                             
-                            <p class="article-metadata">
+                            <span class="article-metadata">
                                 {% if tutorial.subcategory %}
                                     {% for category in tutorial.subcategory.all %}
                                         {{ category.title }}                                    
                                     {% endfor %}
                                 {% endif %}
-                            </p>
+                            </span>
                         </div>
                     </a>
                 </article>
