--- a/templates/misc/message.part.html
+++ b/templates/misc/message.part.html
@@ -97,7 +97,7 @@
 
         <div class="message-metadata">
             <a href="{{ message.author.get_absolute_url }}" class="username">{{ message.author.username }}</a>
-            <a href="#p{{ message.pk }}" id="p{{ message.id }}" class="date">{{ message.pubdate|naturaltime|capfirst }}</a>
+            <a href="#p{{ message.pk }}" id="p{{ message.id }}" class="date" title="{{ message.pubdate|tooltip_date|capfirst }}">{{ message.pubdate|format_date|capfirst }}</a>
         </div>
 
         <div class="message-content">
